# IDEFIX-ml

./: .gitignore  CMakeLists.txt  about-mkl  idefix.ini  init_idefix_repo.py  init_idefix_repo_clean.py  problem  restore_dicos.sh  restore_kawas.sh  update_project.sh
runs/eigen_tests/2D_axi/: idefix.ini
setups/COS/: CMakeLists.txt  analysis.cpp  analysis.hpp  cos.hpp  idefix.ini  idefix_plot.py  mythermalDiffusion.cpp  setup.cpp
setups/COS-GPU/: CMakeLists.txt  analysis.cpp  analysis.hpp  clean.sh  cos.hpp  idefix.ini  idefix_plot.py  mythermalDiffusion.cpp  setup.cpp
setups/COS-GPU/linear/: COS_linear.cpp  COS_linear.py  COS_linear_nonaxi.cpp  COS_linear_nonaxi.py
setups/Janus21/: NOTES.txt  definitions.hpp  idefix.ini  setup.cpp
setups/PlanetDisk2D/: definitions.hpp  idefix.ini  setup.cpp  setup.cpp.bac
setups/PlanetDisk3D/: definitions.hpp  idefix.ini  setup.cpp  setup.cpp.bac.new  setup.cpp.old  stockholm.cpp  temp.sh
setups/ViscousDisk/: idefix.ini  setup.cpp
src/: global.cpp  global.hpp  input.cpp  main.cpp  problem  version.hpp
src/dataBlock/planetarySystem/: planet.cpp  planetarySystem.cpp
src/fluid/: fluid.hpp  thermalDiffusion.cpp  thermalDiffusion.hpp  viscosity.cpp  viscosity.cpp.DEBUG  viscosity.cpp.debug  viscosity.hpp
src/fluid/RiemannSolver/HDsolvers/: hllcHD.hpp
src/gravity/: gravity.cpp  selfGravity.cpp
src/output/: dump.cpp  output.hpp  vtk.cpp  xdmf.cpp
src/utils/iterativesolver/: bicgstab.hpp  iterativesolver.hpp
test/Planet/PlanetSpiral2D/: idefix.ini  setup.cpp
test/SelfGravity/RandomSphere/: testme.py
